# par-file-server

./: .gitignore  Cargo.toml  README.md  plan.md
src/: errors.rs  lib.rs  main.rs  message.rs  test.rs  utilities.rs
src/client/: connection.rs  errors.rs  mod.rs  utilities.rs
src/client/message/: receiver.rs  sender.rs
src/server/: fsrw_mutex.rs  handler.rs  mod.rs  threadpool.rs  utilities.rs
src/server/message/: receiver.rs  sender.rs
