[package]
name = "par-file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
name = "parfs"
path = "src/lib.rs"

[[bin]]
name = "client"          
path = "src/bin/parfs-client.rs" 

[[bin]]
name = "server"          
path = "src/bin/parfs-server.rs"

[[bin]]
name = "test"
path = "src/test.rs"